test/positive/feature_stringliterals.java

public class feature_stringliterals {
  public feature_stringliterals() {}
  protected String x = "foo";
}

