test/negative/feature_unicodeescapes.java

public class feature_unicodeescapes {
  public feature_unicodeescapes() {}
  protected String x = "\u2297";
}

